--- a/LifeCycle/LifeCycle/MainWindow.xaml
+++ b/LifeCycle/LifeCycle/MainWindow.xaml
@@ -11,7 +11,7 @@
         <k:KinectRegion x:Name="kinectRegion" Margin="0,-9,0,39" Background="#FF746E6E">
 
             <Grid Margin="53,10,10,-10">
-                <Grid HorizontalAlignment="Left" Width="411" Margin="-52,-10,0,-28" Background="#FF01A2E8">
+                <Grid HorizontalAlignment="Left" Width="340" Margin="-52,-10,0,-28" Background="#FF01A2E8">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="950*"/>
                         <RowDefinition Height="223*"/>
@@ -24,15 +24,15 @@
                     </Border>
                     <k:KinectTileButton Content="Options" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="60,294,0,0" VerticalAlignment="Top" Width="250" x:Name="showOptionsButton" Click="showOptionsButton_Click" Height="150" Background="White" Foreground="#FF01A2E8" FontSize="48" FontFamily="Microsoft Uighur"/>
                 </Grid>
-                <Grid HorizontalAlignment="Left" Height="737" VerticalAlignment="Top" Width="603" Margin="359,-9,-9,-28" Background="White">
+                <Grid HorizontalAlignment="Left" Height="737" VerticalAlignment="Top" Width="678" Margin="288,-9,-13,-29" Background="White">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="278*"/>
                         <RowDefinition Height="176*"/>
                         <RowDefinition Height="281*"/>
                         <RowDefinition Height="438*"/>
                     </Grid.RowDefinitions>
-                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="10,113.419,0,0" VerticalAlignment="Top" Width="250" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" FontSize="48" FontFamily="Microsoft Uighur" />
-                    <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="343,113.419,0,0" Width="250" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" FontSize="48" FontFamily="Microsoft Uighur" VerticalAlignment="Top" />
+                    <k:KinectTileButton Content="Begin Workout" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="10,113,0,0" VerticalAlignment="Top" Width="250" x:Name="beginWorkoutButton" Click="beginWorkoutButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" FontSize="48" FontFamily="Microsoft Uighur" />
+                    <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="420,113,0,0" Width="250" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" FontSize="48" FontFamily="Microsoft Uighur" VerticalAlignment="Top" />
                     <Label Content="LifeCycle" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="100" FontWeight="Bold" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="118" Width="295"/>
                     <Label x:Name="startWorkoutCountdownLabel" Content=""  Margin="292,7,240.597,179" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64" FontWeight="Black" Foreground="#FFDE6D0F" Width="419" d:IsHidden="True" Grid.Row="2" Height="95"/>
                     <k:KinectTileButton Content="Done" LabelBackground="#91908A" HorizontalAlignment="Left" Margin="343,109.419,0,0" VerticalAlignment="Top" Width="250" x:Name="closeOptionsButton" Click="closeOptionsButton_Click" Height="150" Background="#FF01A2E8" Foreground="White" Grid.Row="3" Visibility="Hidden"/>
@@ -42,7 +42,7 @@
                     <k:KinectScrollViewer x:Name="selectTimeScrollViewer" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top" Height="195" Width="570" Foreground="#FF01A2E8" Grid.RowSpan="2" Grid.Row="1" Visibility="Hidden">
                         <k:KinectScrollViewer.HoverBackground>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="Black" Offset="0"/>
+                                <GradientStop Color="#FF01A2E8" Offset="0"/>
                                 <GradientStop Color="White" Offset="1"/>
                             </LinearGradientBrush>
                         </k:KinectScrollViewer.HoverBackground>
@@ -52,7 +52,7 @@
                     <Label x:Name="heartRateLabel_Copy" Content="heartrate (BPM):" HorizontalAlignment="Left" Margin="10,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="194"/>
                     <Label x:Name="heartRateLabel_Copy1" Content="Sats:" HorizontalAlignment="Left" Margin="343,56.419,0,0" Grid.Row="3" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Height="62" Width="60"/>
                     <Label x:Name="encouragementBox" Content="" HorizontalAlignment="Left" Margin="79,0,0,0" Grid.Row="1" VerticalAlignment="Top" Height="110" Width="400" FontSize="72" FontFamily="Microsoft Uighur"/>
-                    <Image Margin="310,0,186,31" Source="heart_beat.png" Stretch="Fill"/>
+                    <Image Margin="310,0,259,57" Source="heart_beat.png" Stretch="Fill"/>
 
                 </Grid>
 
