--- a/LifeCycle/LifeCycle/LoginWindow.xaml
+++ b/LifeCycle/LifeCycle/LoginWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="LifeCycle" Height="300" Width="300" Background="White" ShowInTaskbar="False" Topmost="True" Foreground="#FF1F3378" FontFamily="Microsoft Uighur" FontSize="20" BorderBrush="#FF446078" ResizeMode="CanMinimize">
-    <Grid x:Name="grid1" Background="White">
+    <Grid x:Name="grid1" Background="White" KeyDown="grid1_KeyDown">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="145*"/>
             <ColumnDefinition Width="147*"/>
