--- a/CliniCycle/CliniCycle/MainWindow.xaml
+++ b/CliniCycle/CliniCycle/MainWindow.xaml
@@ -10,7 +10,7 @@
     <Grid Margin="0,10,2,0">
         <k:KinectSensorChooserUI HorizontalAlignment="Center" VerticalAlignment="Top" Name="sensorChooserUi" />
         <k:KinectRegion Name="kinectRegion">
-            <Grid x:Name="LayoutRoot" OpacityMask="Black" RenderTransformOrigin="0.478,0.52" Background="White" Margin="-8,0,10,0" >
+            <Grid x:Name="LayoutRoot" OpacityMask="Black" RenderTransformOrigin="0.478,0.52" Margin="0,0,2,0" >
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="257*"/>
@@ -26,7 +26,7 @@
                     <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4" Width="160" Height="120" MouseEnter="patient1_Click" />
                 </Border>
                 <Border x:Name="borderPatientLarge" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="189.09,211.15,0,0" Height="409.851" Width="557.91" Grid.Row="1" Grid.Column="1">
-                	<Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeedLarge"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4"/>
+                    <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeedLarge"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="-4,-4,-3,-6"/>
                 </Border>
                 <Border x:Name="borderPatient2" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="175,16,0,0" Height="120" Width="160" Grid.Row="1" Grid.ColumnSpan="2">
                     <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed2"   HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill" Margin="-4" Width="160" Height="120"/>
@@ -37,9 +37,9 @@
                 <Border x:Name="borderPatient4" BorderThickness="4" BorderBrush="#FF01A2E8" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,16,341,0" Height="120" Width="160" Grid.Row="1" Grid.Column="1">
                     <Image k:KinectRegion.KinectRegion="{Binding ElementName=kinectRegion}" x:Name="kinectPatientFeed4"   HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="Fill" Margin="0,0,-8,-8" Width="160" Height="120"/>
                 </Border>
-                <TextBlock x:Name="patientIDBlock" HorizontalAlignment="Left" Margin="25.911,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="124" Width="404.089" FontWeight="Bold" FontSize="64" Background="#FF01A2E8" Foreground="White" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"/>
-                <TextBlock x:Name="patientHeartrateBlock" HorizontalAlignment="Left" Margin="10,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="124" Width="356" FontWeight="Bold" FontSize="48" Background="#FF01A2E8" Foreground="White" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"><Run Language="en-ca" Text="Heart rate: --"/></TextBlock>
-                <TextBlock x:Name="patientOxygenSatBlock" HorizontalAlignment="Left" Margin="10,380.732,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="76" Width="420.179" FontWeight="Bold" FontSize="48" Background="#FF01A2E8" Foreground="White" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"><Run Language="en-ca" Text="Oxygen Saturation: --"/></TextBlock>
+                <TextBlock x:Name="patientIDBlock" HorizontalAlignment="Left" Margin="0,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="71" Width="421" FontWeight="Bold" FontSize="64" Background="#FFFEFFFF" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"/>
+                <TextBlock x:Name="patientHeartrateBlock" HorizontalAlignment="Left" Margin="4,379,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="105" Width="420" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"><Run Language="en-ca" Text="Heart rate: --"/></TextBlock>
+                <TextBlock x:Name="patientOxygenSatBlock" HorizontalAlignment="Left" Margin="3,427,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="57" Width="421" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2"><Run Language="en-ca" Text="Oxygen Saturation: --"/></TextBlock>
                 <k:KinectTileButton x:Name="buttonPatient2" Content="Button" HorizontalAlignment="Left" Margin="175,16,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient2_Click" Background="Black" Opacity="0" Grid.Row="1" Grid.ColumnSpan="2"/>
                 <k:KinectTileButton x:Name="buttonPatient3" HorizontalAlignment="Left" Margin="83,16,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient3_Click" Background="Black" Opacity="0" Grid.Row="1" Grid.Column="1"/>
                 <k:KinectTileButton x:Name="buttonPatient4" Content="Button" HorizontalAlignment="Right" Margin="0,16,341,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient4_Click" Background="Black" Opacity="0" Grid.Row="1" Grid.Column="1"/>
@@ -53,31 +53,25 @@
                 </Border>
                 <k:KinectTileButton x:Name="buttonPatient6" Content="Button" HorizontalAlignment="Right" Margin="0,16,11,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient6_Click" Background="Black" Opacity="0" Grid.Row="1" Grid.Column="1"/>
                 <k:KinectTileButton x:Name="buttonPatient1" Content="Button" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Width="160" Height="120" Click="patient1_Click" Background="#FF0A0202" Grid.Row="1" Opacity="0"/>
-                <Label x:Name="heartRate1" HorizontalAlignment="Left" Height="39" Margin="10,135,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Heart Rate: --"/>
-                <Label x:Name="sat1" HorizontalAlignment="Left" Height="28.324" Margin="10,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Oxygen Sat:  --"/>
-                <Label x:Name="heartRate4" HorizontalAlignment="Left" Height="39" Margin="256,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --"/>
-                <Label x:Name="sat4" HorizontalAlignment="Left" Height="28.324" Margin="256,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="177" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --"/>
-                <Label x:Name="heartRate2" HorizontalAlignment="Left" Height="38" Margin="175,136,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Heart Rate: --" Grid.ColumnSpan="2"/>
-                <Label  x:Name="sat2" HorizontalAlignment="Left" Height="32" Margin="175,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Oxygen Sat:  --" Grid.ColumnSpan="2"/>
-                <Label  x:Name="heartRate3" HorizontalAlignment="Left" Height="38" Margin="83,136,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --"/>
-                <Label  x:Name="sat3" HorizontalAlignment="Left" Height="32" Margin="83,162,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --"/>
-                <Label  x:Name="heartRate5" HorizontalAlignment="Left" Height="27" Margin="426,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --"/>
-                <Label  x:Name="sat5" HorizontalAlignment="Left" Height="32" Margin="426,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --"/>
-                <Label  x:Name="heartRate6" HorizontalAlignment="Left" Height="27" Margin="591,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --"/>
-                <Label  x:Name="sat6" HorizontalAlignment="Left" Height="32" Margin="591,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --"/>
+                <Label x:Name="heartRate1" HorizontalAlignment="Left" Height="39" Margin="10,135,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label x:Name="sat1" HorizontalAlignment="Left" Height="44" Margin="10,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label x:Name="heartRate4" HorizontalAlignment="Left" Height="39" Margin="256,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label x:Name="sat4" HorizontalAlignment="Left" Height="44" Margin="256,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="177" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label x:Name="heartRate2" HorizontalAlignment="Left" Height="38" Margin="175,136,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Heart Rate: --" Grid.ColumnSpan="2" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="sat2" HorizontalAlignment="Left" Height="44" Margin="175,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Oxygen Sat:  --" Grid.ColumnSpan="2" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="heartRate3" HorizontalAlignment="Left" Height="38" Margin="83,136,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="sat3" HorizontalAlignment="Left" Height="44" Margin="83,162,0,0" Grid.Row="1" VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="heartRate5" HorizontalAlignment="Left" Height="27" Margin="426,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="sat5" HorizontalAlignment="Left" Height="32" Margin="426,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="heartRate6" HorizontalAlignment="Left" Height="27" Margin="591,135,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Heart Rate: --" Background="{x:Null}" Foreground="#FF0063FF"/>
+                <Label  x:Name="sat6" HorizontalAlignment="Left" Height="32" Margin="591,162,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="166" FontSize="14.667" Grid.Column="1" Content="Oxygen Sat:  --" Background="{x:Null}" Foreground="#FF0063FF"/>
                 <k:KinectTileButton Content="Exit" HorizontalAlignment="Left" LabelBackground="Brown" Margin="10,534,0,0" Width="163" x:Name="exitProgramButton" Click="exitProgramButton_Click" Height="87" Background="#FF01A2E8" Foreground="White" Grid.Row="1" FontSize="48" FontFamily="Microsoft Uighur" VerticalAlignment="Top" Grid.Column="1" />
-                <Label x:Name="bloodPressure1" HorizontalAlignment="Left" Height="44" Margin="10,190.324,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --"/>
-                <Label x:Name="bloodPressure2" HorizontalAlignment="Left" Height="44" Margin="175,190.324,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --" Grid.ColumnSpan="2"/>
-                <Label x:Name="bloodPressure3" HorizontalAlignment="Left" Height="25.976" Margin="83,185.175,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --" Grid.Column="1"/>
-                <Label x:Name="bloodPressure4" HorizontalAlignment="Left" Height="31.126" Margin="256,185.175,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --" Grid.Column="1"/>
-                <Label x:Name="bloodPressure5" HorizontalAlignment="Left" Height="25.976" Margin="426,185.175,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --" Grid.Column="1"/>
-                <TextBlock x:Name="BloodPressureBlock" HorizontalAlignment="Left" Margin="10,442,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="420" FontWeight="Bold" FontSize="48" Background="#FF01A2E8" Foreground="White" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2" Text="Blood Pressure: --"/>
-                <Label x:Name="bloodPressure6" HorizontalAlignment="Left" Height="29.074"  VerticalAlignment="Top" Width="160" FontSize="14.667" Content="Blood Pressure: --" Margin="591,185.175,0,0" Grid.Column="1" Grid.Row="1"/>
+                <TextBlock x:Name="patientBloodPressureBlock" HorizontalAlignment="Left" Margin="10,331,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="43" Width="356" FontWeight="Bold" FontSize="48" Background="White" Foreground="#FF01A2E8" FontFamily="Microsoft Uighur" Grid.Row="1" Grid.ColumnSpan="2" Text="Blood Pressure:"/>
 
 
             </Grid>
         </k:KinectRegion>
-        <Image Margin="200,-14,736,639" Source="heart_beat.png" Stretch="Fill"/>
+        <Image Margin="200,-14,726,651" Source="heart_beat.png" Stretch="Fill"/>
     </Grid>
 
 </Window>
